test/should_pass/retype_005.grg
actions retype_005 using attrib_model_001;

rule r {
	pattern {
		a:NINT;
		b:NINT;
		a -e:Edge-> b;
		a -f:Edge-> b;
	}
	replace {
		c: typeof(a)<b>;
		a -e-> c;
		c <-f- a;
	}
}

