test/should_fail/inh_attrib_008.grg
actions inh_attrib_008 using inh_attrib_model_008;

rule r {
	pattern {
	}
	replace {
	}
}

